--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "homepage": "https://bitbucket.org/Arhimondus/cu-grabber#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "express": "^4.15.2",
+    "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
     "random-http-useragent": "^1.0.2",
     "request": "^2.81.0"
