--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
+    "json-beautify": "^1.0.1",
     "random-http-useragent": "^1.0.2",
     "request": "^2.81.0"
   }
