--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
     "json-beautify": "^1.0.1",
+    "promise-mysql": "^3.0.1",
     "random-http-useragent": "^1.0.2",
     "request": "^2.81.0"
   }
