--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "homepage": "https://bitbucket.org/Arhimondus/cu-grabber#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "express": "^4.15.2",
     "jquery": "^3.2.1",
     "jsdom": "^9.12.0",
     "json-beautify": "^1.0.1",
     "promise-mysql": "^3.0.1",
     "random-http-useragent": "^1.0.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "yargs": "^7.0.2"
   }
 }
